--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
+body{
+  background: #141414;
+  color: #fff;
+}
+
+.movie-app > .row{
+  overflow-x: auto;
+  flex-wrap: nowrap;
+}
+
+.nav-bar{
+  display: flex;
+  justify-content: space-between;
+}
+
+.image-container{
+  width: 300px;
+  position: relative;
+  transition: transform 0.2s;
+}
+
+.image-container img{
+  max-width: 100%;
+}
+
+.image-container:hover{
+  cursor: pointer;
+  transform: scale(1.1) ;
+}
+.image-container:hover .overlay{
+  opacity: 1;
+}
+.overlay{
+  position: absolute;
+  background: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  transition: 0.5s ease;
+  opacity: 0;
+  bottom: 0;
+  font-size: 20px;
+  padding: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button{
+  background: lightblue;
+  margin: 5px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.modal{
+  width: 100%;
+  height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.reviewmodal{
+  background: #fff;
+  color: #141414;
+}
+
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
   color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-control {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
 }
